--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
+    "clsx": "^2.1.1",
     "next": "14.2.4",
+    "next-auth": "5.0.0-beta.19",
     "react": "^19.0.0-rc-9c6806964f-20240703",
     "react-dom": "^19.0.0-rc-9c6806964f-20240703"
   },
